# wiktionary-parser

./: .gitignore  LICENSE  README.md  extract_infinitives.py  extract_verbs_json.py  filter_spanish_verbs.py  pyproject.toml  wiktionary_to_csv.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yml  release-artifacts.yml
config/languages/: ca.yml  es-test.yml  es.yml  fr.yml
config/runs/: dev.yml  release.yml  test.yml  update-test-files.yml
data/: README.md
data/infinitive-dumps/: README.md  ca-en-infinitives.jsonl.zst
data/verb-csvs/spanish/: aburrirse.csv  beber.csv  comer.csv  conocer.csv  escribir.csv  ir.csv  (+2 more)
data/verb-dumps/: bg-en-verbs.jsonl.zst  bokmal-en-verbs.jsonl.zst  da-en-verbs.jsonl.zst  el-en-verbs.jsonl.zst  eo-en-verbs.jsonl.zst  ga-pt-verbs.jsonl.zst  hr-en-verbs.jsonl.zst  ja-ja-verbs.jsonl.zst  ko-en-verbs.jsonl.zst  ko-ko-verbs.jsonl.zst  lv-en-verbs.jsonl.zst  nynorsk-en-verbs.jsonl.zst  ro-en-verbs.jsonl.zst  sv-en-verbs.jsonl.zst  tk-tk-verbs.jsonl.zst
docs/: data-sources.md  how-to-use.md
src/: compress_kaikki_extracts.py  extract_infinitives.py  wiktionary_parser.py  wiktionary_to_csv.py
src/helpers/: extract_from_spec.py  postprocess_impersonal_forms.py
src/kaikki_handlers/: compress_kaikki_extracts.py  extract_infinitives.py
src/language_functions/: ca.py  es.py  fr.py
tests/: README.md  test_csv_identical.py  test_output_artifacts.py
tests/golden-files/: ca.jsonl  es.jsonl  fr.jsonl
tests/pylint_checks/: pre_lint_check.py  whitelist_module_name.py
(+1076 files in other folders)
