[project]
name = "wiktionary-parser"
version = "0.0.0"
description = "Parsing and cleaning Wiktionary data"
requires-python = "==3.12.0"

dependencies = [
  "black~=24.10.0",
  "pylint~=3.0.0",
  "polars~=1.35.2",
  "pyyaml~=6.0.3",
]

[tool.black]
line-length = 140

[tool.pylint]
ignore = ["venv"]
init-hook = 'import sys; sys.path.append(".")'
max-line-length = 140
disable = [
    "W1309",  # Using an f-string without any variables
    "R0902",  # too many instance attributes
    "R0903",  # too few public methods
    "W0511",  # flagging TODOs
    "R0911",  # Too many return statements
    "R0912",  # Too many branches
    "R0915",  # Too many statements
    "R0914",  # Too many local variables
    "R0913",  # Too many arguments
    "C0103",  # snake_case check
]
load-plugins = [    # Custom pylint checks
  "tests.pylint_checks.pre_lint_check",
  "tests.pylint_checks.whitelist_module_name",
]